[UPDATE] Two Binding flicker issue resolved on dynamic form data, added simple validation

--- a/src/css/VerticalNavigationBar.css
+++ b/src/css/VerticalNavigationBar.css
@@ -130,7 +130,7 @@
 
 .sapSuiteTvNavBarItemLink:hover {}
 
-.sapSuiteTvNavBarItem[data-sap-ui-vnb-step-active="true"] >.sapSuiteTvNavBarItemLink:hover {
+.sapSuiteTvNavBarItem:[data-sap-ui-vnb-step-active="true"] >.sapSuiteTvNavBarItemLink:hover {
     background-color: rgba(248, 248, 248, 0.85);
     color: #007cc0;
 }
